test: [Customer Controller] [Tarefa 11] Assignment - Test Create Customer